# ensemblcov

./: Cargo.toml  README.md
sample-files/: counts.matrix  differntialexpression.sample  differntialresults.txt  id.txt  idexon.txt  sample.gtf  sample.matrix
src/: annotate.rs  args.rs  autogenerate.rs  awk.sh  counts.rs  differential.rs  exon.rs  extract.rs  main.rs  parallelautogenerate.rs  threaded.rs
