[package]
name = "ensemblcov"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT"
authors = ["Gaurav Sablok <gsablok@ibch.poznan.pl>"]
description = "ensemblcov for human genomics"
homepage = "https://github.com/IBCHgenomic/ensemblcov"
repository = "https://github.com/IBCHgenomic/ensemblcov"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
